# autoresearch

./: .gitignore  prepare.py  program.md  pyproject.toml  train.py
docs/: How the Brain Represents Sequences; Demonstration and Conversation (1080p_16fps_H264-128kbit_AAC).txt  Knowledge in Hebbian Synapses (1080p_24fps_H264-128kbit_AAC).txt  Machine Learning vs Human Learning; They’re Not the Same (360p_30fps_H264-96kbit_AAC).txt  Neurons vs AI; They’re Nothing Alike (1080p_30fps_H264-128kbit_AAC-English).txt  Why AI Doesn't Organize Knowledge Like the Brain (1080p_60fps_H264-128kbit_AAC-English).txt
